package com.example.dplsearchmyphone

data class LocationData(
    val uid: String,
    val latitude: Double,
    val longitude: Double)
