package com.example.dplsearchmyphone

class User (
    val uid: String,
    val name: String
    )